--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Background and Main Theme */
 body {
-    background-image: url(2518332.jpg); /* Replace with the actual image name */
+    background-image: url('images/2518332.jpg'); /* Replace with the actual image name */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
