--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* 🎨 Dark Mode Theme with Enhanced Style */
 body {
-    background-image: url('blue_galaxy.png'); /* Add the correct path */
+    background-image: url('2518332.jpg'); /* Add the correct path */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
